GS-9824 Fix spacing on feature area

--- a/src/webapp/res/css/gs2010_styles.css
+++ b/src/webapp/res/css/gs2010_styles.css
@@ -959,6 +959,10 @@ body.cobranded #pageGS {
     padding-right:10px;
 }
 
+.padbtm_120{
+    padding-bottom:1.2em;
+}
+
 .hidden {
     display: none;
 }
